--- a/presentation/src/main/res/layout/weather_item_list.xml
+++ b/presentation/src/main/res/layout/weather_item_list.xml
@@ -5,6 +5,7 @@
     android:layout_height="75dp"
     android:background="#03A9F4"
     android:gravity="center"
+    android:layout_margin="2dp"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -17,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
-        tools:text="30ºC"
-        android:layout_marginBottom="2dp"/>
+        android:textSize="20dp"
+        android:ellipsize="end"
+        tools:text="30ºC"/>
 </LinearLayout>
