--- a/presentation/src/main/res/layout/weather_activity.xml
+++ b/presentation/src/main/res/layout/weather_activity.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#03A9F4"
+    android:background="#5776C7"
     android:orientation="vertical">
 
     <LinearLayout
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/cityName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -25,6 +26,7 @@
 
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivWeather"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
@@ -32,6 +34,7 @@
             android:src="@drawable/fewclouds" />
 
         <TextView
+            android:id="@+id/tvWeatherDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -41,6 +44,7 @@
             tools:text="FEW CLOUDS"></TextView>
 
         <TextView
+            android:id="@+id/tvWeatherTemp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -73,6 +77,7 @@
                     android:src="@drawable/thermometer" />
 
                 <TextView
+                    android:id="@+id/tvPreassure"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -95,6 +100,7 @@
                     android:src="@drawable/water" />
 
                 <TextView
+                    android:id="@+id/tvHumidity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -117,6 +123,7 @@
                     android:src="@drawable/wave" />
 
                 <TextView
+                    android:id="@+id/tvWind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
